# llm-eti

./: .buildinfo  .gitignore  CLAUDE.md  ETI_sim  EXPERIMENTAL_DESIGN.md  GEMINI_RESULTS_SUMMARY.md  GEMINI_SIMULATIONS.md  Makefile  README.html  README.md  analysis.py  analyze_pknf_gemini.py  app.py  bulk_analysis.py  cli.py  collect_results.py  combine_analyze.py  config.py  debug_gemini_pknf.py  debug_gemini_progressive.py  debug_gemini_simple.py  debug_gemini_simple_progressive.py  discussion.html  environment.yml  gemini_simulation_log.txt  genindex.html  gpt_utils.py  intro.html  methods.html  objects.inv  plotting.py  pyproject.toml  references.html  requirements.txt  run_gemini_simulations.sh  run_gemini_simulations_safe.sh  run_pknf_gemini.py  run_pknf_gemini_simple.py  search.html  searchindex.js  (+5 more)
ETI_simulations/: Makefile  app.py  cli.py  combine_analyze.py  data_utils.py  gpt_utils.py  plotting.py  regression_utils.py  results_for_paper.txt  table_utils.py  tax_simulation_results.csv  tax_utils.py
PKNF_2024_replication/: GPT_PKNF_replication.py  GPT_PKNF_replication_40.py  PKNF_results.py  PKNF_results_replication.py
book/: Makefile  README.md  _config.yml  _toc.yml  discussion.md  intro.md  methods.md  references.bib
data/: PKNF_modified_40pct_results_gpt-4o-mini.csv  PKNF_replication_results.pkl
llm_eti/: __init__.py  analysis.py  analyze_cache.py  app.py  cache_utils.py  collect_results.py  combine_analyze.py  config.py  data_utils.py  edsl_client.py  edsl_client_update.py  experiment.py  gpt_utils.py  paper_results.py  personas.py  pknf_analysis.py  (+10 more)
(+81 files in other folders)
