[project]
name = "llm_eti"
version = "0.1.0"
description = "What can LLMs tell us about the ETI?"
authors = [
    {name = "Jason DeBacker", email = "jason.debacker@moore.sc.edu"},
    {name = "Max Ghenis", email = "max@policyengine.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "jupyter-book>=0.15.0",
    "sphinx>=4.0",
    "pydata-sphinx-theme>=0.13.0",
    "myst-nb>=0.17.0",
    "sphinx-book-theme>=1.0.0",
    "sphinx-design>=0.4.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
pdf = [
    "pyppeteer>=1.0.0",
    "nbconvert[webpdf]>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_eti"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true